[workspace]
members = ["packages/backend-rs", "packages/macro-rs"]
resolver = "2"

[workspace.dependencies]
macro_rs = { path = "packages/macro-rs" }

napi = { version = "2.16.6", default-features = false }
napi-derive = "2.16.4"
napi-build = "2.1.3"

argon2 = "0.5.3"
basen = "0.1.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
convert_case = "0.6.0"
cuid2 = "0.1.2"
emojis = "0.6.2"
idna = "0.5.0"
image = "0.25.1"
isahc = "1.7.2"
nom-exif = "1.2.0"
once_cell = "1.19.0"
openssl = "0.10.64"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.82"
quote = "1.0.36"
rand = "0.8.5"
redis = "0.25.3"
regex = "1.10.4"
rmp-serde = "1.3.0"
sea-orm = "0.12.15"
serde = "1.0.202"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
strum = "0.26.2"
syn = "2.0.62"
sysinfo = "0.30.12"
thiserror = "1.0.60"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
urlencoding = "2.1.3"

[profile.release]
lto = true
